# DevScale-Assignment-5

./: .env  Readme.md
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: fd24cff4a4f2_init_tables.py
backend/app/: main.py  worker.py
backend/app/core/: settings.py
backend/app/models/: database.py  engine.py
backend/app/modules/document/: methods.py  router.py  schema.py  tasks.py
backend/app/modules/search/: router.py
backend/app/utils/: chromadb.py  mistral.py  openai.py
