[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "chromadb>=1.4.2",
    "fastapi>=0.137.1",
    "onnxruntime==1.16.3",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "scalar-fastapi>=1.8.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
    "protobuf==3.20.3",
    "mistralai>=2.4.12",
    "openai>=2.43.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extended-exclude = ['alembic']

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
